# robingrad

./: .gitignore  LICENSE  README.md  build.sh  publish.sh  pyproject.toml  test.sh
example/: lab.ipynb
examples/: binary_classification.ipynb  lab.ipynb  mini_batch_regression.ipynb  multilabel_classification.ipynb  regression.ipynb
examples/binary_classification/: binary_classification.ipynb
examples/data/: y.csv
examples/multilabel_classification/: multilabel_classification.ipynb
examples/regression/: mini_batch_regression.ipynb  regression.ipynb
robin/: __init__.py  tensor.py
robingrad/: __init__.py  graph.py  optim.py  state.py  tensor.py
robingrad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
robingrad/nn/: __init__.py  loss.py
tests/: test_tensor.py
