[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robingrad"
version = "0.0.6"
authors = [
  { name="Marco Salvalaggio", email="mar.salvalaggio@gmail.com" },
]
description = "Something between Tinygrad and Micrograd"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "graphviz",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/marcosalvalaggio/robingrad"
"Bug Tracker" = "https://github.com/marcosalvalaggio/robingrad/issues"
